Making changes to index and main files, and commiting for the first time from VS Code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <div class="game-board" id="gameBoard"></div>
+    <!-- filepath: your HTML file (e.g., index.html) -->
+  <div id="gameBoard"></div>
+
 
   <div class="sidebar">
     <h3>Code Blocks</h3>
